Updated metadata implementation for GeoAPI changes (GEO-51 and GEO-56)
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@12952 e5c1c795-43da-0310-a71f-fac65c449510